feat: add emoji to app data

--- a/src/_data/app.json
+++ b/src/_data/app.json
@@ -1,4 +1,5 @@
 {
     "title": "Cria Plus",
-    "description": "An expanded starter template for Toollama.com applications"
+    "description": "An expanded starter template for Toollama.com applications",
+    "emoji": "✨"
 }
